--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -24,6 +24,7 @@
     "@mantine/notifications": "^7.7.1",
     "@mantine/nprogress": "^7.7.1",
     "@mantine/spotlight": "^7.7.1",
+    "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
     "dayjs": "^1.11.10",
