--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -37,6 +37,7 @@
     "wagmi": "^2.5.18"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.266",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
