--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
     "viem": "^2.9.7",
-    "wagmi": "^2.5.18"
+    "wagmi": "^2.5.18",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
