get_closest_block and chrome api changes

--- a/chrome-ext-react/src/manifest.json
+++ b/chrome-ext-react/src/manifest.json
@@ -11,7 +11,7 @@
     "scripting",
     "tabs",
     "activeTab",
-    "storage"
+    "unlimitedStorage"
 ],
   "host_permissions": [
       "https://*/*",
