--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -27,6 +27,7 @@
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
+    "abi-decoder": "^2.4.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
