--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -28,7 +28,9 @@
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
+    "meta": "^2.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
