--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -27,12 +27,14 @@
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "meta": "^2.2.25",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
