--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -28,6 +28,8 @@
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
     "abi-decoder": "^2.4.0",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "react": "^18.2.0",
