--- a/chrome-ext-react/package.json
+++ b/chrome-ext-react/package.json
@@ -27,7 +27,9 @@
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.28.14",
     "@web3modal/wagmi": "^4.1.4",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
