--- a/chrome-ext-react/src/manifest.json
+++ b/chrome-ext-react/src/manifest.json
@@ -5,7 +5,7 @@
   "version": "0.1",
   "action": {
     "default_popup": "index.html",
-    "default_icon": "pp_logo.png"
+    "default_icon": "pplogo.png"
   },
   "permissions": [
     "scripting",
